[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages.find.where = ["."]
package-data.vfflags = ["*.pyi", "py.typed"]


[project]
name = "vf-flags"
version = "0.2.5"
description = "A wrapper for easily making bitwise flags."
authors = [
    {name = "Kae Bartlett", email = "kae@voxelfox.co.uk"},
]
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
        'Development Status :: 4 - Beta',
        'License :: OSI Approved :: MIT License',
        'Intended Audience :: Developers',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Topic :: Internet',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Utilities',
        'Typing :: Typed',
]
dependencies = [
    "typing_extensions",
]
